--- a/FoodTruckAndroid/Resources/layout/MenuFragment.axml
+++ b/FoodTruckAndroid/Resources/layout/MenuFragment.axml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:id="@+id/imgMenu"
+        android:scaleType="fitXY"
+        android:layout_gravity="center_horizontal" />
     <TextView
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -11,12 +17,6 @@
         android:id="@+id/txtMenuName"
         android:gravity="center"
         android:layout_margin="10dp" />
-    <ImageView
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:id="@+id/imgMenu"
-        android:scaleType="fitXY"
-        android:layout_gravity="center_horizontal" />
     <TextView
         android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -28,7 +28,7 @@
     <TextView
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtMenuPrice"
         android:gravity="center"
